name:                broken
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/broken#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Broken
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable broken-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , broken
  default-language:    Haskell2010

test-suite broken-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestBroken.hs
  build-depends:       base
                     , broken
                     , tasty
                     , tasty-quickcheck
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/broken
